; ModuleID = '/home/carl/AnghaBench/linux/drivers/perf/extr_arm-ccn.c_arm_ccn_pmu_disable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/perf/extr_arm-ccn.c_arm_ccn_pmu_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pmu = type { i32 }
%struct.arm_ccn = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@CCN_DT_PMCR = common dso_local global i64 0, align 8
@CCN_DT_PMCR__PMU_EN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pmu*)* @arm_ccn_pmu_disable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @arm_ccn_pmu_disable(%struct.pmu* %0) #0 {
  %2 = alloca %struct.pmu*, align 8
  %3 = alloca %struct.arm_ccn*, align 8
  %4 = alloca i32, align 4
  store %struct.pmu* %0, %struct.pmu** %2, align 8
  %5 = load %struct.pmu*, %struct.pmu** %2, align 8
  %6 = call %struct.arm_ccn* @pmu_to_arm_ccn(%struct.pmu* %5)
  store %struct.arm_ccn* %6, %struct.arm_ccn** %3, align 8
  %7 = load %struct.arm_ccn*, %struct.arm_ccn** %3, align 8
  %8 = getelementptr inbounds %struct.arm_ccn, %struct.arm_ccn* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @CCN_DT_PMCR, align 8
  %12 = add nsw i64 %10, %11
  %13 = call i32 @readl(i64 %12)
  store i32 %13, i32* %4, align 4
  %14 = load i32, i32* @CCN_DT_PMCR__PMU_EN, align 4
  %15 = xor i32 %14, -1
  %16 = load i32, i32* %4, align 4
  %17 = and i32 %16, %15
  store i32 %17, i32* %4, align 4
  %18 = load i32, i32* %4, align 4
  %19 = load %struct.arm_ccn*, %struct.arm_ccn** %3, align 8
  %20 = getelementptr inbounds %struct.arm_ccn, %struct.arm_ccn* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = load i64, i64* @CCN_DT_PMCR, align 8
  %24 = add nsw i64 %22, %23
  %25 = call i32 @writel(i32 %18, i64 %24)
  ret void
}

declare dso_local %struct.arm_ccn* @pmu_to_arm_ccn(%struct.pmu*) #1

declare dso_local i32 @readl(i64) #1

declare dso_local i32 @writel(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
